--- a/_posts/2013-12-31-compiler.md
+++ b/_posts/2013-12-31-compiler.md
@@ -9,7 +9,7 @@ tags: [compiler,yacc,lex]
 
 <p>陈老师的课程共50讲，这里只列出前面基础理论部分的前三章，对于想学习lex和yacc的朋友，应该可以比较好的入门了。下面的视频本人基本都看过了，也对视频的内容做了简要的概述，方便读者有针对性的学习</p>
 <p>课件资源可以从<a href="http://staff.ustc.edu.cn/~yiyun/">这里下载</a></p>
-<p>教材可以从<a href="http://yunpan.cn/QDpIPJpscU38H">这里下载</a></p>
+<p>教材可以从[这里下载](http://pchou.qiniudn.com/编译原理.pdf)
 <p>资源是优酷的视频，有广告，你们懂的。如果通过本页右下方的"在手机上阅读"可以在手机上查看本页，到目前为止，视频在手机上看是<code>没有广告</code>的。</p>
 <p>如果您觉得本文还凑活，有点用处，可以帮忙扩散</p>
 
