--- a/_posts/2015-03-03-c-and-asm.md
+++ b/_posts/2015-03-03-c-and-asm.md
@@ -7,6 +7,8 @@ tags: [Compiler]
 
 最近网易云课堂开放了一节叫[Linux内核分析](http://mooc.study.163.com/course/USTC-1000029000#/info)的课程。一直对操作系统和计算机本质很感兴趣，于是进去看了下，才第一堂课，老师就要求学生写一篇关于课时1的博客作为作业。对于这种新颖的作业形式，笔者相当惊讶。好吧，作为任务，还是完成一下吧，刚好需要消化一下。本文将会按照要求，将一段C语言代码编译成汇编，并给予分析和自己的思考。
 
+本文作者周平，原创作品转载请注明出处
+
 首先对会涉及到的一些CPU寄存器和汇编的基础知识罗列一下：
 
 - 16位、32位、64位的CPU寄存器名称有所不同，比如指令地址寄存器`ip`，在16位中叫`ip`，32位中叫`eip`，64位叫`rip`
